# curly-expander

./: CHANGELOG.md  README.md  curly-expander.cabal
Text/: CurlyExpander.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
tests/: BaseCaseTest.hs  CustomCaseTest.hs  NestedCaseTest.hs  RangeCaseTest.hs
