cabal-version:       2.2

name:                curly-expander
version:             0.1.0.0
synopsis: A library for curly braces (brackets) expanding - similar to bash curly expanding
license-file:        LICENSE
author:              Přemysl Šťastný
maintainer:          premysl.stastny@hotmail.com
category:            Text
build-type:          Simple
extra-source-files:  CHANGELOG.md README.md

common deps
  ghc-options: -Wall -Wextra
  build-depends:   base >= 4 && <5, parsec >=3 && <4, text >=1 && < 2

common tests
  import: deps
  hs-source-dirs: tests
  default-language:    Haskell2010
  build-depends: curly-expander

library
  import: deps
  exposed-modules: Text.CurlyExpander
  default-language:    Haskell2010
  

test-suite base-case-test
  import: tests
  main-is: BaseCaseTest.hs
  type: exitcode-stdio-1.0
 
test-suite range-case-test
  import: tests
  main-is: RangeCaseTest.hs
  type: exitcode-stdio-1.0

test-suite nested-case-test
  import: tests
  main-is: NestedCaseTest.hs
  type: exitcode-stdio-1.0
